# cargo-ws

./: .gitignore  .travis.yml  Cargo.toml  README.md  README_CN.md  rustfmt.toml
.github/workflows/: cargo.yml  ci.yml  rust.yml
src/: config.rs  main.rs
