[package]
name = "cargo-ws"
description = "cargo plugin, generate vscode workspace file."
authors = ["Lack <598223084@qq.com>"]
repository = "https://github.com/lack-io/cargo-ws"
documentation = "https://docs.rs/cargo-ws"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-ws"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
toml = { version = "0.5" }
serde_json = { version = "1.0" }
anyhow = "1.0"